objects/disco__Youreka_Salesforce1__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting allows you to change the look and feel of Youreka in Salesforce1</description>
    <fields>
        <fullName>disco__Salesforce1_Button_Color__c</fullName>
        <label>Salesforce1 Button Color</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Salesforce1_Button_Text_Color__c</fullName>
        <label>Salesforce1 Button Text Color</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Salesforce1_Header_Color__c</fullName>
        <description>Hex (#ffffff) or RGB (rgb(255,255,255)) code for Salesforce1 header color</description>
        <label>Salesforce1 Header Color</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Salesforce1_Header_Text_Color__c</fullName>
        <description>Hex (#ffffff) or RGB (rgb(255,255,255)) code for Salesforce1 header color</description>
        <label>Salesforce1 Header Text Color</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Youreka Salesforce1</label>
</CustomObject>